--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 <body>
     <div class="main">
         <div class="header">
-
+            <h3 id="display"></h3>
         </div>
         <div class="section">
             <button id="clear" class="btn">AC</button>
             <button id="delete" class="btn">C</button>
             <button id="percent" class="btn">%</button>
             <button id="divide" class="btn">/</button>
-            <button id="7" class="btn">7</button>
-            <button id="8" class="btn">8</button>
-            <button id="9" class="btn">9</button>
+            <button id="seven" class="btn">7</button>
+            <button id="eight" class="btn">8</button>
+            <button id="nine" class="btn">9</button>
             <button id="add" class="btn">+</button>
-            <button id="4" class="btn">4</button>
-            <button id="5" class="btn">5</button>
-            <button id="5" class="btn">6</button>
+            <button id="four" class="btn">4</button>
+            <button id="five" class="btn">5</button>
+            <button id="six" class="btn">6</button>
             <button id="subtract" class="btn">-</button>
-            <button id="1" class="btn">1</button>
-            <button id="2"class="btn">2</button>
-            <button id="3" class="btn">3</button>
+            <button id="one" class="btn">1</button>
+            <button id="two"class="btn">2</button>
+            <button id="three" class="btn">3</button>
             <button id="multiply" class="btn">x</button>
-            <button id="0" class="btn">0</button>
+            <button id="zero" class="btn">0</button>
             <button id="dot" class="btn">.</button>
             <button id="equals" class="btn">=</button>
         </div>
