--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div class="main">
         <div class="header">
             <h3 id="display"></h3>
+            <h3 id="answer"></h3>
         </div>
         <div class="section">
             <button id="clear" class="btn">AC</button>
             <button id="delete" class="btn">C</button>
-            <button id="percent" class="btn">%</button>
+            <button id="modulus" class="btn">%</button>
             <button id="divide" class="btn">/</button>
             <button id="seven" class="btn">7</button>
             <button id="eight" class="btn">8</button>
