--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
             <h3 id="answer"></h3>
         </div>
         <div class="section">
-            <button id="clear" class="btn">AC</button>
-            <button id="delete" class="btn">C</button>
-            <button id="modulus" class="btn">%</button>
-            <button id="divide" class="btn">/</button>
-            <button id="seven" class="btn">7</button>
-            <button id="eight" class="btn">8</button>
-            <button id="nine" class="btn">9</button>
-            <button id="add" class="btn">+</button>
-            <button id="four" class="btn">4</button>
-            <button id="five" class="btn">5</button>
-            <button id="six" class="btn">6</button>
-            <button id="subtract" class="btn">-</button>
-            <button id="one" class="btn">1</button>
-            <button id="two"class="btn">2</button>
-            <button id="three" class="btn">3</button>
-            <button id="multiply" class="btn">x</button>
-            <button id="zero" class="btn">0</button>
-            <button id="dot" class="btn">.</button>
-            <button id="equals" class="btn">=</button>
+            <button id="clear" class="clear">AC</button>
+            <button id="delete" class="delete">C</button>
+            <button id="modulus" class="operator" value="%">%</button>
+            <button id="divide" class="operator" value="/">/</button>
+            <button id="seven" class="number" value="7">7</button>
+            <button id="eight" class="number" value="8">8</button>
+            <button id="nine" class="number" value="9">9</button>
+            <button id="add" class="operator" value="+">+</button>
+            <button id="four" class="number" value="4">4</button>
+            <button id="five" class="number" value="5">5</button>
+            <button id="six" class="number" value="6">6</button>
+            <button id="subtract" class="operator" value="7">-</button>
+            <button id="one" class="number" value="1">1</button>
+            <button id="two"class="number" value="2">2</button>
+            <button id="three" class="number" value="3">3</button>
+            <button id="multiply" class="operator" value="*">*</button>
+            <button id="zero" class="number" value="0">0</button>
+            <button id="dot" class="dot" value=".">.</button>
+            <button id="equals" class="operator" value="=">=</button>
         </div>
     </div>
 </body>
