--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button id="multiply" class="operator" value="*">*</button>
             <button id="zero" class="number" value="0">0</button>
             <button id="dot" class="dot" value=".">.</button>
-            <button id="equals" class="equals" value="=">=</button>
+            <button id="equals" class="equals operator" value="=">=</button>
         </div>
     </div>
 </body>
