--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         <div class="section">
             <button id="clear" class="clear">AC</button>
             <button id="delete" class="delete">C</button>
-            <button id="modulus" class="operator" value="%">%</button>
-            <button id="divide" class="operator" value="/">/</button>
-            <button id="seven" class="number" value="7">7</button>
-            <button id="eight" class="number" value="8">8</button>
-            <button id="nine" class="number" value="9">9</button>
-            <button id="add" class="operator" value="+">+</button>
-            <button id="four" class="number" value="4">4</button>
-            <button id="five" class="number" value="5">5</button>
-            <button id="six" class="number" value="6">6</button>
-            <button id="subtract" class="operator" value="7">-</button>
-            <button id="one" class="number" value="1">1</button>
-            <button id="two"class="number" value="2">2</button>
-            <button id="three" class="number" value="3">3</button>
-            <button id="multiply" class="operator" value="*">*</button>
-            <button id="zero" class="number" value="0">0</button>
-            <button id="dot" class="dot" value=".">.</button>
-            <button id="equals" class="equals operator" value="=">=</button>
+            <button id="modulus" class="operator">%</button>
+            <button id="divide" class="operator">/</button>
+            <button id="7" class="number">7</button>
+            <button id="8" class="number">8</button>
+            <button id="9" class="number">9</button>
+            <button id="plus" class="operator">+</button>
+            <button id="4" class="number">4</button>
+            <button id="5" class="number">5</button>
+            <button id="6" class="number">6</button>
+            <button id="minus" class="operator">-</button>
+            <button id="1" class="number">1</button>
+            <button id="2"class="number">2</button>
+            <button id="3" class="number">3</button>
+            <button id="multiply" class="operator">*</button>
+            <button id="0" class="number">0</button>
+            <button id="dot" class="dot">.</button>
+            <button id="equals" class="equals operator">=</button>
         </div>
     </div>
 </body>
